# bh_kaere

./: .gitattributes  .gitignore  ISSUES.md  LICENSE.md  Makefile  README.md  REQUIREMENTS_CHECKLIST.md  a_maze_ing.py  braiding.py  config.py  config.txt  config_playable.txt  display.py  generator.py  initializer.py  maze.py  mazegen-1.0.0-py3-none-any.whl  mazegen-2.0.0-py3-none-any.whl  mazegen.py  options.py  pyproject.toml  setup.cfg  validator.py  writer.py
braiding/: __init__.py  braiding.py
core/: __init__.py  errors.py  maze.py  metrics.py
engine/: __init__.py  ascii_display.py  backtracker.py  braiding.py  build.py  display.py  generator.py  initializer.py  maze.py  metrics.py  output.py  validator.py  writer.py
examples/: 01_corners_playable_25x20.txt  01_corners_playable_25x20_result.txt  01_playable_25x20.txt  01_playable_25x20_result.txt  01_standard_20x15_generated.txt  01_standard_20x15_init.txt  02_corners_perfect_20x15.txt  02_corners_perfect_20x15_result.txt  02_perfect_20x15.txt  02_perfect_20x15_result.txt  02_wide_30x12_generated.txt  02_wide_30x12_init.txt  03_playable_wide_30x12.txt  03_playable_wide_30x12_result.txt  03_relocated_20x15_generated.txt  03_relocated_20x15_init.txt  03_top_bottom_edge_mid_perfect_21x15.txt  03_top_bottom_edge_mid_perfect_21x15_result.txt  04_left_right_edge_mid_playable_25x15.txt  04_left_right_edge_mid_playable_25x15_result.txt  04_perfect_relocated_20x15.txt  04_perfect_relocated_20x15_result.txt  04_relocated_20x15.txt  04_relocated_20x15_result.txt  04a_endpoints_ok_8x7_generated.txt  05_omitted_7x7_init.txt  (+67 more)
(+80 files in other folders)
